@@ -1,9 +1,6 @@
 <!doctype HTML PUBLIC "-//IETF//DTD HTML//EN"><html>
 
 <head>
-<meta http-equiv="Content-Language" content="en-us">
-<meta name="GENERATOR" content="Microsoft FrontPage 5.0">
-<meta name="ProgId" content="FrontPage.Editor.Document">
 <title>The Common Lisp Cookbook</title>
 </head>
 
