@@ -1,3 +1,6 @@
+2003-09-02
+  Updated windows.html and index.html by Bill Clementson-minor edit.
+
 2003-09-01
   Updated windows.html, index.html, and .emacs by Bill Clementson to 
   provide inital support for Mac OS X, add additional optional packages,
